--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -1,14 +1,14 @@
 <div id="crowd-o-meter">
 
-<div id="beachname"> La Jolla Shores </div>
+<!--<div id="beachname"> La Jolla Shores </div> -->
 <div id="crowdpage"> Crowd-O-Meter </div>
 <div id="crowd"> High: Packed like Sardines </div>
-<div id="time"> TIME: 2:10PM </div>
+<div id="time"> 2:10PM </div>
 <div id="bttitle"> BEST TIME: <br> </div> 
 <div id="besttime"> Before 9:30AM + After 4:00PM </div>
 <div id="wttitle"> WORST TIME: <br> </div> 
 <div id="worsttime">11:00AM-2:30PM </div>
-<div id="hottiealert"> Hottie Alert: <img src= </div>
+<div id="hottiealert"> Hottie Alert: <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> </div>
 
 </div>
 
@@ -20,6 +20,13 @@ div .comment .title .height{
 	border-radius: 2px;
 }
 
+img{
+	width:15%;
+	height: 15%;
+	display: inline-block;
+	float: right;
+
+}
 #beachname {
 	font-size:40px;
 	text-align: center;
@@ -27,17 +34,17 @@ div .comment .title .height{
 
 #crowdpage{
 	text-align: center;
-	font-size: 40px;
+	font-size: 60px;
 }
 
 #crowd{
 	text-align: center;
-	font-size: 27px;
+	font-size: 30px;
 }
 
 #time{
 	text-align: center;
-	font-size: 27px;
+	font-size: 30px;
 }
 
 #bttitle{
@@ -46,7 +53,7 @@ div .comment .title .height{
 }
 
 #besttime{
-	text-align: right;
+	text-align: center;
 	font-size: 27px;
 }
 
@@ -56,16 +63,16 @@ div .comment .title .height{
 }
 
 #worsttime{
-	text-align: right;
+	text-align: center;
 	font-size: 27px;
 }
 
 #hottiealert{
 	text-align: center;
-	font-family: 'Sintony', sans-serif;
 	font-size: 27px;
+	display: inline-block;
+	padding-right: 15%;
 }
-
 
 
 </style>
