--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -5,9 +5,9 @@
 <div id="crowd"> High: Packed like Sardines </div>
 <div id="time"> 2:10PM </div>
 <div id="bttitle"> BEST TIME: <br> </div> 
-<div id="besttime"> Before 9:30AM + After 4:00PM </div>
+<div id="besttime"> before 9:30am + after 4:00pm </div>
 <div id="wttitle"> WORST TIME: <br> </div> 
-<div id="worsttime">11:00AM-2:30PM </div>
+<div id="worsttime">BETWEEN 11:00AM-2:30PM </div>
 <div id="hottiealert"> Hottie Alert: <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> </div>
 
 </div>
@@ -15,7 +15,6 @@
 
 <style>
 div .comment .title .height{
-	font-family: 'Montserrat', sans-serif;
 	font-size:40px;
 	border-radius: 2px;
 }
@@ -34,44 +33,56 @@ img{
 
 #crowdpage{
 	text-align: center;
-	font-size: 60px;
+	color: #ef4444;
+	font-size: 50px;
+	letter-spacing: 4px;
 }
 
 #crowd{
 	text-align: center;
 	font-size: 30px;
+	letter-spacing: 2px;
 }
 
 #time{
 	text-align: center;
 	font-size: 30px;
+	letter-spacing: 2px;
 }
 
 #bttitle{
-	text-align: center;
+	text-align: left;
+	padding-left: 30px;
 	font-size: 27px;
+	letter-spacing: 3px;
 }
 
 #besttime{
-	text-align: center;
-	font-size: 27px;
+	text-align: right;
+	font-size: 25px;
+	letter-spacing: 1px;
 }
 
 #wttitle{
-	text-align: center;
+	text-align: left;
+	padding-left: 30px;
 	font-size: 27px;
+	letter-spacing: 3px;
 }
 
 #worsttime{
-	text-align: center;
-	font-size: 27px;
+	text-align: right;
+	font-size: 25px;
+	letter-spacing: 1px;
 }
 
 #hottiealert{
-	text-align: center;
+	text-align: left;
+	padding-left: 30px;
 	font-size: 27px;
 	display: inline-block;
-	padding-right: 15%;
+	padding-right: 8%;
+	letter-spacing: 3px;
 }
 
 
