--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -32,14 +32,14 @@ img{
 }
 
 #crowdpage{
-	text-align: center;
+	text-align: left;
 	color: #ef4444;
 	font-size: 50px;
 	letter-spacing: 4px;
 }
 
 #crowd{
-	text-align: center;
+	text-align: left;
 	font-size: 30px;
 	letter-spacing: 2px;
 }
@@ -48,11 +48,11 @@ img{
 	text-align: center;
 	font-size: 30px;
 	letter-spacing: 2px;
+	padding-right: 50px;
 }
 
 #bttitle{
 	text-align: left;
-	padding-left: 30px;
 	font-size: 27px;
 	letter-spacing: 3px;
 }
@@ -61,11 +61,11 @@ img{
 	text-align: right;
 	font-size: 25px;
 	letter-spacing: 1px;
+	padding-right: 60px;
 }
 
 #wttitle{
 	text-align: left;
-	padding-left: 30px;
 	font-size: 27px;
 	letter-spacing: 3px;
 }
@@ -74,14 +74,14 @@ img{
 	text-align: right;
 	font-size: 25px;
 	letter-spacing: 1px;
+	padding-right: 60px;
 }
 
 #hottiealert{
 	text-align: left;
-	padding-left: 30px;
 	font-size: 27px;
 	display: inline-block;
-	padding-right: 8%;
+	padding-right: 50px;
 	letter-spacing: 3px;
 }
 
