--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -20,8 +20,8 @@ div .comment .title .height{
 }
 
 img{
-	width:15%;
-	height: 15%;
+	width:12%;
+	height: 12%;
 	display: inline-block;
 	float: right;
 
@@ -48,7 +48,6 @@ img{
 	text-align: center;
 	font-size: 30px;
 	letter-spacing: 2px;
-	padding-right: 50px;
 }
 
 #bttitle{
@@ -58,10 +57,9 @@ img{
 }
 
 #besttime{
-	text-align: right;
+	text-align: center;
 	font-size: 25px;
 	letter-spacing: 1px;
-	padding-right: 60px;
 }
 
 #wttitle{
@@ -71,17 +69,15 @@ img{
 }
 
 #worsttime{
-	text-align: right;
+	text-align: center;
 	font-size: 25px;
 	letter-spacing: 1px;
-	padding-right: 60px;
 }
 
 #hottiealert{
 	text-align: left;
 	font-size: 27px;
 	display: inline-block;
-	padding-right: 50px;
 	letter-spacing: 3px;
 }
 
