--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -8,11 +8,11 @@
 <div style="clear:both;"></div>
 <div class="centercontent">
 <div class="sidebar">
-	<div class="tab"><div class="iconname" id="weather"><a href='#'><img src="/images/weathericon.png" class="img-responsive icon"/></a></div></div>
-	<div class="tab"><div class="iconname" id="surf"><a href='#'><img src="/images/surficon.png" class="img-responsive icon"/></a></div></div>
-	<div class="tab"><div class="iconname" id="map"><a href='#'><img src="/images/mapicon.png" class="img-responsive icon"/></a></div></div>
-	<div class="tab"><div class="iconname" id="activity"><a href='#'><img src="/images/activityicon2.png" class="img-responsive icon"/></a></div></div>
-	<div class="tab"><div class="iconname" id="crowd"><a href='#'><img src="/images/crowdicon.png" class="img-responsive icon"/></div></a></div>
+	<div class="iconname" id="weather"><a href='#'><img src="/images/weathericon.png" class="img-responsive icon"/></a></div>
+	<div class="iconname" id="surf"><a href='#'><img src="/images/surficon.png" class="img-responsive icon"/></a></div>
+	<div class="iconname" id="map"><a href='#'><img src="/images/mapicon.png" class="img-responsive icon"/></a></div>
+	<div class="iconname" id="activity"><a href='#'><img src="/images/activityicon2.png" class="img-responsive icon"/></a></div>
+	<div class="iconname" id="crowd"><a href='#'><img src="/images/crowdicon.png" class="img-responsive icon"/></a></div>
 	<!--div class="tab"><div class="iconname" id="alert"><a href='#'>ALERT</a></div><img src="/images/alerticon.png" class="icon"/></div-->
 	<!--div class="tab"><div class="iconname" id="help"><a href='#'>HELP</a></div><img src="/images/helpicon.png" class="icon"/></div-->
 </div>
@@ -61,23 +61,18 @@ function loadWeather(){
 	var weatherRequest = "http://api.openweathermap.org/data/2.5/weather?lat=32.8608&lon=-117.2569";
 	$( ".sbcontent" ).load( "/weather/{{stringname}}" , errorResponse );
 }
-
 function loadSurf(){
 	$(".sbcontent").load("/surf",errorResponse);
 }
-
 function loadActivity(){
 	$(".sbcontent").load("/activity",errorResponse);
 }
-
 function loadCrowds(){
 	$(".sbcontent").load("/crowds",errorResponse);
 }
-
 function loadMap(){
 	$(".sbcontent").load("/map", errorResponse);
 }
-
 function parseweather(result){
 	console.log(result);
 }
