--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -35,7 +35,15 @@ function getWeather(){
 
 function displayWeather(result){
 	console.log(result);
+	var date = new Date(result["sys"]["sunset"]);
+	var hours = date.getHours();
+	var minutes = date.getMinutes();
+	var seconds = date.getSeconds();
+	var formattedTime = hours + ':' + minutes + ':' + seconds;
+	console.log(formattedTime);
 	$("div #order").html("<p>"+result['name']+"</p>");
+	//$("div #time").html("<p>"+date.toLocaleTimeString()+"</p>");
+
 }
 getWeather();
 </script>
