--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -1,22 +1,55 @@
 <div class="title">{{beachname}}</div>
 <div class="comment">{{comment}}</div>
 <div class="height">{{height}}</div>
+<div id="high"> HIGH 1:35pm </div>
+<div id="low"> LOW 6:01am </div> 
+<div id="wind"> NE LIGHT WIND </div> 
+<div id="h2o"> H2O: 59F </div> 
 
-<div id="beachname"> La Jolla Shores </div>
-<div id="time"> 2:10PM </div>
-<div id="icon"> <img src=sunclouds1.png> </div> 
-<div id="temp"> 72 </div>
-<div id="sunset"> Sunset: 6:02PM </div>
-<div id="sunrise"> Sunrise: 6:27PM </div>
-<div id="high"> 75 </div>
-<div id="low"> 59 </div> 
 
 
 <style>
 div .comment .title .height{
-	font-size:60px;
-	border-radius:;
+	font-size: 60px;
+	border-radius: 2px;
 }
 
+.title{
+	text-align: center;
+	font-size: 60px;
+}
 
-</style>
+.comment{
+	text-align: center;
+	font-size: 70px;
+	color: #2A6496;
+}
+
+.height{
+	text-align: center;
+	font-size: 40px;
+	color: #ef4444;
+
+}
+
+#high{
+	text-align: center;
+	font-size: 40px;
+}
+
+#low{
+	text-align: center;
+	font-size: 40px;
+}
+#wind{
+	text-align: left;
+	font-size: 20px;
+	float: left;
+}
+
+#h2o{
+	text-align: right;
+	font-size: 20px;
+	float: right;
+}
+
