--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -33,9 +33,6 @@ body{
 	background: #F0DE62;/*default background color for buttons*/
 	background-image: url('/images/purtywood.png'); 
 }
-div a{
-	display: block;
-}
 /*///////////////////////////*/
 .arrow{
 	display:inline-block;
@@ -59,24 +56,25 @@ to {width:50px;}
 .icon{
 	width:50px;
 	height:50px;
-	float:right;
 }
 .iconname{
+	width:50px;
+	height:50px;
 	float:left;
 	font-size: 30px;
 	margin-left:0px;
-	width:100%;
 	clear:both;
 }
 .sbcontent{
 	line-height: 230%;
 	position:relative;
-	width:300px;
+	width:80%;
 	height:300px;
 	float:right;
 	z-index: 2;
 }
 .sidebar{
+	width:15%;
 	position:absolute;
 	float:left;
 	z-index: 2;
