--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -8,11 +8,11 @@
 <div style="clear:both;"></div>
 <div class="centercontent">
 <div class="sidebar">
-	<div class="iconname" id="weather"><a href='#'><img src="/images/weathericon.png" class="img-responsive icon"/></a></div>
-	<div class="iconname" id="surf"><a href='#'><img src="/images/surficon.png" class="img-responsive icon"/></a></div>
-	<div class="iconname" id="map"><a href='#'><img src="/images/mapicon.png" class="img-responsive icon"/></a></div>
-	<div class="iconname" id="activity"><a href='#'><img src="/images/activityicon2.png" class="img-responsive icon"/></a></div>
-	<div class="iconname" id="crowd"><a href='#'><img src="/images/crowdicon.png" class="img-responsive icon"/></a></div>
+	<div class="iconname" id="weather"><a href='#'><img src="/images/weathericon.png" class="img-responsive"></a></div>
+	<div class="iconname" id="surf"><a href='#'><img src="/images/surficon.png" class="img-responsive icon"></a></div>
+	<div class="iconname" id="map"><a href='#'><img src="/images/mapicon.png" class="img-responsive icon"></a></div>
+	<div class="iconname" id="activity"><a href='#'><img src="/images/activityicon2.png" class="img-responsive icon"></a></div>
+	<div class="iconname" id="crowd"><a href='#'><img src="/images/crowdicon.png" class="img-responsive icon"></a></div>
 	<!--div class="tab"><div class="iconname" id="alert"><a href='#'>ALERT</a></div><img src="/images/alerticon.png" class="icon"/></div-->
 	<!--div class="tab"><div class="iconname" id="help"><a href='#'>HELP</a></div><img src="/images/helpicon.png" class="icon"/></div-->
 </div>
@@ -101,9 +101,9 @@ $( document ).ready(function() {
 	//$(".sidebar").click( function(){ expandSidebar(); } );
 	$(".arrow a").click(function() { loadMainContent("beachlist") });
 	$(".home a").click(function() { window.location.href="/"; });
-	$("#surf a").click(function(){ loadSurf("ljssurf.png") });
-	$("#weather a").click(function(){loadWeather("ljsmain.png") });
-	$("#crowd a").click(function(){loadCrowds("crowd.png") });
+	$("#surf a").click(function(){ loadSurf() });
+	$("#weather a").click(function(){loadWeather() });
+	$("#crowd a").click(function(){loadCrowds() });
 	$("#login a").click( function(){ loadMainContent("LOGIN") });
 	$("#help a").click(function() { loadMainContent("HELP"); }); 
 	});
