surf page update

--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -17,12 +17,14 @@ div .comment .title .height{
 .title{
 	text-align: center;
 	font-size: 60px;
+	margin-bottom: 10%;
 }
 
 .comment{
 	text-align: center;
 	font-size: 70px;
 	color: #2A6496;
+	margin-bottom: 5%;
 }
 
 .height{
