--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -22,19 +22,21 @@ img{
 	width:12%;
 	height: 12%;
 	float: right;
+	margin-right: 5px;
 }
 
 
 #crowdpage{
-	text-align: left;
-	color: #ef4444;
+	text-align: center;
+	color: #2a6496;
 	font-size: 50px;
-	letter-spacing: 3px;
+	letter-spacing: 5px;
 }
 
 #crowd{
-	text-align: left;
-	font-size: 30px;
+	text-align: center;
+	color: #ef4444;
+	font-size: 25px;
 	letter-spacing: 2px;
 }
 
@@ -47,32 +49,31 @@ img{
 #bttitle{
 	text-align: left;
 	font-size: 27px;
-	letter-spacing: 3px;
+	letter-spacing: 0px;
 }
 
 #besttime{
-	text-align: center;
+	text-align: right;
 	font-size: 25px;
-	letter-spacing: 1px;
+	letter-spacing: 3px;
 }
 
 #wttitle{
 	text-align: left;
 	font-size: 27px;
-	letter-spacing: 3px;
+	letter-spacing: 0px;
 }
 
 #worsttime{
-	text-align: center;
+	text-align: right;
 	font-size: 25px;
-	letter-spacing: 1px;
+	letter-spacing: 3px;
 }
 
 #hottiealert{
-	text-align: left;
+	text-align: center;
 	font-size: 27px;
-	display: inline-block;
-	letter-spacing: 3px;
+	letter-spacing: 0px;
 }
 
 
