--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -10,7 +10,6 @@
 
 <style>
 div .comment .title .height{
-	font-size: 60px;
 	border-radius: 2px;
 }
 
@@ -18,6 +17,8 @@ div .comment .title .height{
 	text-align: center;
 	font-size: 60px;
 	margin-bottom: 10%;
+	padding-top: 5px;
+	letter-spacing: 4px;
 }
 
 .comment{
@@ -29,29 +30,36 @@ div .comment .title .height{
 
 .height{
 	text-align: center;
-	font-size: 40px;
+	font-size: 50px;
 	color: #ef4444;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	letter-spacing: 2px;
+
 
 }
 
 #high{
 	text-align: center;
 	font-size: 40px;
+	letter-spacing: 2px;
 }
 
 #low{
 	text-align: center;
 	font-size: 40px;
+	letter-spacing: 2px;
+
 }
 #wind{
 	text-align: left;
-	font-size: 20px;
+	font-size: 25px;
 	float: left;
 }
 
 #h2o{
 	text-align: right;
-	font-size: 20px;
+	font-size: 25px;
 	float: right;
 }
 
