--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -29,15 +29,18 @@ img{
 #crowdpage{
 	text-align: center;
 	color: #2a6496;
-	font-size: 50px;
+	font-size: 60px;
 	letter-spacing: 5px;
+	padding-top: 5px;
 }
 
 #crowd{
 	text-align: center;
 	color: #ef4444;
-	font-size: 25px;
+	font-size: 35px;
 	letter-spacing: 2px;
+	padding-top: 4px;
+
 }
 
 #time{
