--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -1,3 +1,4 @@
+<div class="weather">
 <div class="title">{{beachname}}</div>
 <div class="comment">{{comment}}</div>
 <div class="height">{{height}}</div>
@@ -5,7 +6,7 @@
 <div id="low"> LOW 6:01am </div> 
 <div id="wind"> NE LIGHT WIND </div> 
 <div id="h2o"> H2O: 59F </div> 
-
+</div>
 
 
 <style>
@@ -17,7 +18,7 @@ div .comment .title .height{
 	text-align: center;
 	font-size: 60px;
 	margin-bottom: 10%;
-	padding-top: 5px;
+	margin-top: 50px;
 	letter-spacing: 4px;
 }
 
