--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -14,31 +14,30 @@
 
 <style>
 div .comment .title .height{
-	font-size:40px;
 	border-radius: 2px;
 }
 
 img{
 	width:12%;
 	height: 12%;
-	float: right;
-	margin-right: 5px;
+	float: center;
+	margin-right: 0px;
 }
 
 
 #crowdpage{
 	text-align: center;
 	color: #2a6496;
-	font-size: 60px;
-	letter-spacing: 5px;
-	padding-top: 5px;
+	font-size: 40px;
+	letter-spacing: 0px;
+	padding-top: 3px;
 }
 
 #crowd{
 	text-align: center;
 	color: #ef4444;
 	font-size: 35px;
-	letter-spacing: 2px;
+	letter-spacing: 0px;
 	padding-top: 4px;
 
 }
@@ -46,31 +45,31 @@ img{
 #time{
 	text-align: center;
 	font-size: 30px;
-	letter-spacing: 2px;
+	letter-spacing: 0px;
 }
 
 #bttitle{
-	text-align: left;
+	text-align: center;
 	font-size: 27px;
 	letter-spacing: 0px;
 }
 
 #besttime{
-	text-align: right;
+	text-align: center;
 	font-size: 25px;
-	letter-spacing: 3px;
+	letter-spacing: 0px;
 }
 
 #wttitle{
-	text-align: left;
+	text-align: center;
 	font-size: 27px;
 	letter-spacing: 0px;
 }
 
 #worsttime{
-	text-align: right;
+	text-align: center;
 	font-size: 25px;
-	letter-spacing: 3px;
+	letter-spacing: 0px;
 }
 
 #hottiealert{
