--- a/public/css/weather.css
+++ b/public/css/weather.css
@@ -2,6 +2,7 @@ div .comment .title .height{
 	font-size:40px;
 	border-radius:;
 
+
 }
 .weather{
 	text-align: center;
@@ -10,6 +11,9 @@ div .comment .title .height{
 #beachname {
 }
 #time{
+	font-size:30px;
+	padding-top: 5px;
+	padding-bottom: 15px;
 }	
 #icon{
 	display:inline-block;
@@ -20,6 +24,7 @@ img{
 }
 #temp{
 	position: relative;
+	font-size: 60px;
 }
 #sunrise{
 	font-size: 25px;
@@ -29,5 +34,12 @@ img{
 	}
 
 #highlow{
+	padding-bottom: 5px;
+	font-size: 25px;
 	
+}
+
+#weeklywe{
+	padding:7px;
+	font-size: 30px;
 }
