--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -1,4 +1,4 @@
-<div id="crowd-o-meter">
+
 
 <div id="crowdpage"> Crowd-O-Meter </div>
 <div id="crowd"> High: Packed like Sardines </div>
@@ -20,7 +20,7 @@ div .comment .title .height{
 img{
 	width:12%;
 	height: 12%;
-	float: center;
+	float: right;
 	margin-right: 0px;
 }
 
