surf page changes

--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -16,22 +16,22 @@ div .comment .title .height{
 
 .title{
 	text-align: center;
-	font-size: 60px;
-	margin-bottom: 10%;
-	margin-top: 50px;
+	font-size: 40px;
+	margin-bottom: 5%;
+	margin-top: 5%;
 	letter-spacing: 4px;
 }
 
 .comment{
 	text-align: center;
-	font-size: 70px;
+	font-size: 30px;
 	color: #2A6496;
 	margin-bottom: 5%;
 }
 
 .height{
 	text-align: center;
-	font-size: 50px;
+	font-size: 40px;
 	color: #ef4444;
 	padding-top: 6px;
 	padding-bottom: 6px;
@@ -42,13 +42,13 @@ div .comment .title .height{
 
 #high{
 	text-align: center;
-	font-size: 40px;
+	font-size: 25px;
 	letter-spacing: 2px;
 }
 
 #low{
 	text-align: center;
-	font-size: 40px;
+	font-size: 25px;
 	letter-spacing: 2px;
 
 }
