--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -12,12 +12,12 @@ body{
 .pagename{
 	display:inline-block;
 	width:50%;
-	font-size: 40px;
+	font-size: 30px;
 	line-height: 1;
 	text-align: center;
 	position:relative;
 	z-index: 2;
-	color:#4682B4;
+	color:#2a6496;
 }
 #weatherimg{
 	position:relative;
@@ -30,8 +30,8 @@ body{
 	-moz-border-radius: 12px; /* FF1+ */
 	-webkit-border-radius: 12px; /* Saf3-4 */
   	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
-	background: #F0DE62;/*default background color for buttons*/
-	background-image: url('/images/purtywood.png'); 
+	/*background: #F0DE62;/*default background color for buttons*/
+	/*background-image: url('/images/purtywood.png'); */
 }
 /*///////////////////////////*/
 .arrow{
