--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -102,7 +102,8 @@ $( document ).ready(function() {
 	$(".arrow a").click(function() { loadMainContent("beachlist") });
 	$(".home a").click(function() { window.location.href="/"; });
 	$("#surf a").click(function(){ loadSurf() });
-	$("#weather a").click(function(){loadWeather() });
+	$("#weather a").click(function(){loadWeather(); });
+	$("#map a").click(function(){loadMap();});
 	$("#crowd a").click(function(){loadCrowds() });
 	$("#login a").click( function(){ loadMainContent("LOGIN") });
 	$("#help a").click(function() { loadMainContent("HELP"); }); 
