fixed img crowd

--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -1,5 +1,4 @@
 
-
 <div id="crowdpage"> Crowd-O-Meter </div>
 <div id="crowd"> High: Packed like Sardines </div>
 <div id="time"> 2:10PM </div>
@@ -9,15 +8,13 @@
 <div id="worsttime">BETWEEN 11:00AM-2:30PM </div>
 <div id="hottiealert"> Hottie Alert: <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> <img src="/images/heart.png" class="img-responsive"> </div>
 
-</div>
-
 
 <style>
 div .comment .title .height{
 	border-radius: 2px;
 }
 
-img{
+#hottiealert img{
 	width:12%;
 	height: 12%;
 	float: right;
@@ -77,6 +74,4 @@ img{
 	font-size: 27px;
 	letter-spacing: 0px;
 }
-
-
 </style>
