--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -1,5 +1,5 @@
 <div class="weather">
-<div class="title">{{beachname}}</div>
+<!--<div class="title">{{beachname}}</div> -->
 <div class="comment">{{comment}}</div>
 <div class="height">{{height}}</div>
 <div id="high"> HIGH 1:35pm </div>
@@ -14,13 +14,13 @@ div .comment .title .height{
 	border-radius: 2px;
 }
 
-.title{
+/*.title{
 	text-align: center;
 	font-size: 40px;
 	margin-bottom: 5%;
 	margin-top: 5%;
 	letter-spacing: 4px;
-}
+}*/
 
 .comment{
 	text-align: center;
