--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -1,3 +1,7 @@
+<div >
 <div class="title">{{beachname}}</div>
-<div class="comment">{{comment}}</div>
-<div class="height">{{height}}</div>
+<div class=""> 
+
+	<p> hi </p>
+
+
