--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -1,9 +1,10 @@
 <link href="/css/weather.css" rel="stylesheet">
 
 <div class="weather">	
-<div id="beachname"> {{beachname}} </div>
-<div id="time"> 2:10PM </div>
+<!-- <div id="beachname"> {{beachname}} </div> -->
+
 <div id="temp"> 72 </div>
+<div id="time"> 2:10PM </div>
 <div id="icon"> <img src="/images/sunclouds1.png" class="img-responsive"> </div> 
 
 <!-- <div id="sunrise"> Sunrise: 6:27PM </div>
@@ -23,7 +24,7 @@
   			<td>70</td>
 		</tr>
 </table></div>
-<div id="order"> </div>
+<!-- <div id="order"> </div> -->
 </div>
 
 <script>
