--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -3,7 +3,7 @@
 <div class="weather">	
 <!-- <div id="beachname"> {{beachname}} </div> -->
 
-<div id="temp"> 72 </div>
+<div id="temp"> 72' </div>
 <div id="time"> 2:10PM </div>
 <div id="icon"> <img src="/images/sunclouds1.png" class="img-responsive"> </div> 
 
