--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -52,7 +52,7 @@ def=0;
 
 
 function errorResponse ( response, status, xhr ) {
-		parseweather(response);
+		//parseweather(response);
 		if ( status == "error" ) { var msg = "Sorry but there was an error: ";
 		$( "#error" ).html( msg + xhr.status + " " + xhr.statusText );
 	} };
