--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -44,7 +44,7 @@ function getWeather(){
     	location = "Coronado";
   	else if(name == "MissionBay")
     	location = "Mission Bay";
-	$.get(location, displayWeather);
+	//$.get(location, displayWeather);
 }
 
 function displayWeather(result){
