--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -1,3 +1,6 @@
+<link href="/css/surf.css" rel="stylesheet">
+
+
 <div class="weather">
 <!--<div class="title">{{beachname}}</div> -->
 <div class="comment">{{comment}}</div>
