--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -27,11 +27,13 @@ body{
 .headline{
 	font-size:40px;
 	width:100%;
+	margin-bottom: 1%;
 	/*-moz-border-radius: 12px; /* FF1+ */
 	/*-webkit-border-radius: 12px; /* Saf3-4 */
   	/*border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
 	background: #F0DE62;/*default background color for buttons*/
 	/*background-image: url('/images/purtywood.png'); */
+
 }
 /*///////////////////////////*/
 .arrow{
