--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -23,7 +23,7 @@ div .comment .title .height{
 
 #crowdpage{
 	text-align: center;
-	color: #2a6496;
+	/*color: #2a6496;*/
 	font-size: 40px;
 	letter-spacing: 0px;
 	padding-top: 3px;
