--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -29,7 +29,7 @@ getMap();
 
 function getAddress(){
 	var location;
-	var name = "{{loadAddress}}"
+	var name = "{{beachname}}"
 	if(name == "LaJolla")
     	location = "8200 Camino del Oro, La Jolla, 92037"; //la jolla 
 	else if(name == "Oceanside")
