--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -7,7 +7,12 @@
 <div id=""> </div>	
 
 </div>
-
+<style type="text/css">
+  #mapdata img{
+    width:60%;
+    height: 60%;
+  }
+</style>
 <script> 
 function getMap(){
 	var location;
