--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -3,8 +3,8 @@
 <!--<div class="title">{{beachname}}</div> -->
 <div class="comment">{{comment}}</div>
 <div class="height">{{height}}</div>
-<div id="high"> HIGH 1:35pm </div>
-<div id="low"> LOW 6:01am </div> 
-<div id="wind"> NE LIGHT WIND </div> 
-<div id="h2o"> H2O: 59F </div> 
+<div class="high"> {{high}} </div>
+<div class="low"> {{low}}</div> 
+<div class="wind"> {{wind}}</div> 
+<div class="h2o"> {{h2o}}</div> 
 </div>
