--- a/public/css/surf.css
+++ b/public/css/surf.css
@@ -29,25 +29,25 @@ div .comment .title .height{
 
 }
 
-#high{
+.high{
 	text-align: center;
 	font-size: 25px;
 	letter-spacing: 2px;
 }
 
-#low{
+.low{
 	text-align: center;
 	font-size: 25px;
 	letter-spacing: 2px;
 
 }
-#wind{
+.wind{
 	text-align: left;
 	font-size: 25px;
 	float: left;
 }
 
-#h2o{
+.h2o{
 	text-align: right;
 	font-size: 25px;
 	float: right;
