--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -8,10 +8,10 @@
 
 </div>
 <style type="text/css">
-  #mapdata img{
-    width:60%;
-    height: 60%;
-  }
+#mapdata img{
+  width:60%;
+  height: 60%;}
+
 </style>
 <script> 
 function getMap(){
