--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -2,7 +2,7 @@
 
 <div class="map">
 <!-- <div id="name"> {{beachname}} </div> -->
-<div id="maptitle"> Find the Beach! </div>
+<div id="maptitle"> Map View </div>
 <div id="beachAddress"> </div>  
 <div id="mapdata"> </div>
 
