--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -57,6 +57,7 @@ $( document ).ready(function() {
 	$(".home a").click(function() { window.location.href="/"; });
 	$("#surf a").click(function(){ loadSurf()});
 	$("#weather a").click(function(){loadWeather(); });
+	$("#activity a").click(function(){loadActivity(); });
 	$("#map a").click(function(){loadMap();});
 	$("#crowd a").click(function(){loadCrowds() });
 	$("#login a").click( function(){ loadMainContent("LOGIN") });
