--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -1,7 +1,17 @@
-<div >
-<div class="title">{{beachname}}</div>
-<div class=""> 
+<div class="activitypage"> 
+<div id="activitytitle"> Fear Not Boredom </div>
+<div id=""> </div> 
+</div>
 
-	<p> hi </p>
+<style type="text/css">
 
+ .activitypage{
+ 	}
 
+ #activitytitle{
+ 	font-size:35px;
+    text-align:center;
+    padding-bottom:7px;
+}
+
+</style>
