--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -37,7 +37,7 @@ function loadSurf(){
 	$(".sbcontent").load("/surf/{{stringname}}",errorResponse);
 }
 function loadActivity(){
-	$(".sbcontent").load("/activity{{stringname}}",errorResponse);
+	$(".sbcontent").load("/activity/{{stringname}}",errorResponse);
 }
 function loadCrowds(){
 	$(".sbcontent").load("/crowds/{{stringname}}",errorResponse);
