--- a/views/crowds.handlebars
+++ b/views/crowds.handlebars
@@ -74,3 +74,9 @@ div .comment .title .height{
 	letter-spacing: 0px;
 }
 </style>
+<script type="text/javascript">
+
+//this portion of the script gets the current time
+$("div #time").html("<p>"+getRealtime()+"</p>");
+
+</script>
