--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -1,19 +1,44 @@
-<div class="title">{{comment}}</div>
-<div class="activitypage"> 
-<div id="activitytitle"> Fear Not Boredom </div>
-<div id=""> </div> 
+<div class="activitypage">
+<div id="bestact">{{bestact}}</div>
+<div id="youcan">{{youcan}}</div>
+<div id="youcancontent">{{youcancontent}}</div>
+<div id="location">{{location}}</div>
+<div id="locationcontent">{{locationcontent}}</div>
+<div id="no">{{no}}</div>
+<div id="nocontent">{{nocontent}}</div>
 </div>
 
 
 <style type="text/css">
 
  .activitypage{
- 	}
+ 	font-size:25px;
+ 	text-align:center;
+ }
 
- #activitytitle{
- 	font-size:35px;
-    text-align:center;
-    padding-bottom:7px;
+
+#bestact{
+	font-size:30px;
+	padding-bottom:5px;
+
+}
+#youcan{
+	font-size:25px;
+}
+#youcancontent{
+	font-size:20px;
+}
+#location{
+
+}
+#locationcontent{
+	font-size:20px;
+}
+#no{
+
+}
+#nocontent{
+	font-size:20px;
 }
 
 </style>
