--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -36,7 +36,7 @@ function getMap(){
 	else if(name == "Oceanside")
     	location = "/images/OBMap.png";
   	else if(name == "PacificBeach")
-    	location = "/images/PBmap.png";
+    	location = "/images/PBMap.png";
   	else if(name == "Coronado")
     	location = "/images/CorMap.png";
   	else if(name == "MissionBay")
