--- a/views/surf.handlebars
+++ b/views/surf.handlebars
@@ -1,6 +1,4 @@
-
-<link href="/css/surf.css" rel="stylesheet">
-<div class="weather">
+<div class="surfdata">
 <!--<div class="title">{{beachname}}</div> -->
 <div class="comment">{{comment}}</div>
 <div class="height">{{height}}</div>
