--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -1,27 +1,9 @@
-<link href="/css/map.css" rel="stylesheet">
-
 <div class="map">
 <!-- <div id="name"> {{beachname}} </div> -->
-<div id="maptitle"> Map View </div>
-<div id="beachAddress"> </div>  
+<div id="maptitle">Map View</div>
+<div id="beachAddress"></div>
 <div id="mapdata"> </div>
 </div>
-<style type="text/css">
-  #maptitle{
-    font-size:35px;
-  }
-  #beachAddress{
-    font-size:20px;
-    text-align:center;
-    padding-bottom:7px;
-  }
-  #mapdata img{
-    
-    width:70%;
-    height:70%;
-  }
-</style>
-
 <script> 
 function getMap(){
 	var location;
@@ -39,9 +21,6 @@ function getMap(){
 	var tag = "<img src=\"" + location +"\" >";
 	$("div #mapdata").html(tag);
 }
-getMap();
-
-getAddress();
 function getAddress(){
 	var location;
 	var name = "{{beachname}}"
@@ -55,9 +34,14 @@ function getAddress(){
     	location = "1800 Avenida de las Arenas, Coronado, 92118";
   	else if(name == "MissionBay")
     	location = "3448 Crown Point Drive, San Diego, 92109";
-
     var tag = "<p>" + location + "</p>";
     $("div #beachAddress").html(tag);
   
 }
+
+$( document ).ready(function() {
+  getMap();
+  getAddress();
+});
+
 </script>
