--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -2,6 +2,8 @@
 @import "surf.css";
 /* ///////////////// weather.css /////////////////////////*/
 @import "weather.css";
+/* ///////////////// map.css /////////////////////////*/
+@import "map.css";
 
 .pagename{
 	display:inline-block;
@@ -12,11 +14,6 @@
 	position:relative;
 	z-index: 2;
 	color:#2a6496;
-}
-#weatherimg{
-	position:relative;
-	width: 100%;
-	z-index: -10;
 }
 .headline{
 	width:100%;
@@ -40,10 +37,6 @@
 	float:right;
 	width:20%;
 	height: 50px;	
-}
-.icon{
-	width:50px;
-	height:50px;
 }
 .iconname{
 	width:50px;
@@ -83,7 +76,4 @@
 	float:left;
 	width:50px;
 	height: 50px;
-}
-div .comment .title .height{
-	font-size:60px;
 }
