--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,3 @@
-
 html{
 	height: 100%;
 }
@@ -13,44 +12,32 @@ body{
 }
 /* #### Desktops #### */
 @media screen {/*and(min-device-width: 768px){*/
-.container{ /* main screen size*/
-	width:400px;
-}}
-
+.container{width:400px;}}
 /* #### Mobile Phones Portrait #### */
 @media screen and (max-device-width: 480px) and (orientation: portrait){
-.container{ /* main screen size*/
-	/*width:480px;*/
-	width:100%;
-}}
-
+.container{/*width:480px;*/
+	width:100%;}}
 /* #### Mobile Phones Landscape #### */
 @media screen and (max-device-width: 640px) and (orientation: landscape){
-.container{ /* main screen size*/
-	/*width:640px;*/
-	width: 100%;
-}}
+.container{/*width:640px;*/
+	width: 100%;}}
 
 /* #### Mobile Phones Portrait or Landscape #### */
 @media screen and (max-device-width: 640px){
-.container{ /* main screen size*/
-	/*width:640px;*/
+.container{/*width:640px;*/
 	width:100%;
 }}
 
 /* #### iPhone 4+ Portrait or Landscape #### */
 @media screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){
-.container{ /* main screen size*/
-	/*width:480px;*/
+.container{/*width:480px;*/
 	width:100%;
 }}
 
 /* #### Tablets Portrait or Landscape #### */
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px){
- .container{ /* main screen size*/
-	/*width:768px;*/
+ .container{/*width:768px;*/
 	width:100%; /*standard width*/
-
 }}
 .button{
 	margin:5px 0;
@@ -67,9 +54,6 @@ body{
 	font-size: 26px;
 	text-align: right;
 	padding-right: 5px;
-}
-#homeimg{
-	width:100%;
 }
 #buttonline{
 	width:100%;
@@ -91,13 +75,13 @@ body{
 	width:100%;
 	/*background:green; /*sign in background color*/
 }
+#homeimg{width:100%;}
 div a{display:block;}
 a:hover{text-decoration: none;}
 a:link {text-decoration: none}
 a:visited {text-decoration: none}
 a:active {text-decoration: none}
 
-
 /*font for app*/
-@font-face{font-family: myFirstFont;src: url(/fonts/talldark.ttf);}
+@font-face{font-family: myFirstFont;src: url("/fonts/talldark.ttf");}
 div{font-family: myFirstFont;}
