--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -15,7 +15,6 @@
 #bestact{
 	font-size:30px;
 	padding-bottom:5px;
-
 }
 #youcan{
 	font-size:25px;
@@ -23,14 +22,11 @@
 #youcancontent{
 	font-size:20px;
 }
-#location{
-
-}
+#location{}
 #locationcontent{
 	font-size:20px;
 }
-#no{
-}
+#no{}
 #nocontent{
 	font-size:20px;
 }
