--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,11 +3,12 @@
 <head>
 	<title>Beach Bum</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=1;">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 	<link href="/css/index.css" rel="stylesheet">
+    <link href="/css/beachlist.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
