--- a/public/css/beach.css
+++ b/public/css/beach.css
@@ -24,7 +24,6 @@
   	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
 	background: #F0DE62;/*default background color for buttons*/
 	/*background-image: url('/images/purtywood.png'); */
-
 }
 /*///////////////////////////*/
 .arrow{
@@ -63,8 +62,7 @@
 	-webkit-border-radius: 12px; /* Saf3-4 */
   	border-radius: 12px; /* Opera 10.5, IE 9, Saf5, Chrome */	
 }
-.beachcontent{
-}
+.beachcontent{}
 .home img{
 	margin-top:10%;
 	float:right;
