--- a/views/beach.handlebars
+++ b/views/beach.handlebars
@@ -21,31 +21,19 @@
 </div><!-- end center content -->
 <div style="clear:both;"></div>
 </div> <!-- end beach content -->
-
 <script type="text/javascript">
 function loadWeather(){
 	var weatherRequest = "http://api.openweathermap.org/data/2.5/weather?lat=32.8608&lon=-117.2569";
-	$( ".sbcontent" ).load( "/weather/{{stringname}}" , errorResponse );
-}
-function loadSurf(){
-	$(".sbcontent").load("/surf/{{stringname}}",errorResponse);
-}
-function loadActivity(){
-	$(".sbcontent").load("/activity/{{stringname}}",errorResponse);
-}
-function loadCrowds(){
-	$(".sbcontent").load("/crowds/{{stringname}}",errorResponse);
-}
-function loadMap(){
-	$(".sbcontent").load("/map/{{stringname}}", errorResponse);
-}
+	$( ".sbcontent" ).load( "/weather/{{stringname}}" , errorResponse );}
+function loadSurf(){$(".sbcontent").load("/surf/{{stringname}}",errorResponse);}
+function loadActivity(){$(".sbcontent").load("/activity/{{stringname}}",errorResponse);}
+function loadCrowds(){$(".sbcontent").load("/crowds/{{stringname}}",errorResponse);}
+function loadMap(){$(".sbcontent").load("/map/{{stringname}}", errorResponse);}
 function parseweather(result){
 	console.log(result);
 }
-loadWeather();
-//allHide(); //call default
-
 $( document ).ready(function() {
+	loadWeather();
 	//$(".sidebar").click( function(){ expandSidebar(); } );
 	$(".arrow a").click(function() { loadMainContent("beachlist") });
 	$(".home a").click(function() { window.location.href="/"; });
