new weather api yahoo

--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -6,6 +6,7 @@
 <div id="locationcontent">{{locationcontent}}</div>
 <div id="no">{{no}}</div>
 <div id="nocontent">{{nocontent}}</div>
+<div id="button" id="suggest"><a href="#">Suggest Activity</a></div>
 </div>
 <style type="text/css">
 .activitypage{
@@ -31,3 +32,10 @@
 	font-size:20px;
 }
 </style>
+<script>
+$.document.ready(function(){
+	$("#suggest a").click(function(){
+		
+	});
+});
+</script>
