--- a/public/css/weather.css
+++ b/public/css/weather.css
@@ -2,9 +2,15 @@ div .comment .title .height{
 	font-size:40px;
 	border-radius:;
 }
+
+
+
+
 .weather{
 	text-align: center;
 	font-size: 40px;
+	opacity:.9;
+
 }
 
 #time{
