--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -1,4 +1,5 @@
 <div class="activitypage">
+<div id="acticon"><img src="{{acticon}}"></div>
 <div id="bestact">{{bestact}}</div>
 <div id="youcan">{{youcan}}</div>
 <div id="youcancontent">{{youcancontent}}</div>
@@ -11,6 +12,9 @@
 .activitypage{
  	font-size:25px;
  	text-align:center;
+ }
+ #acticon{
+ 	display: 60%;
  }
 #bestact{
 	font-size:30px;
