new api weather

--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -36,11 +36,11 @@ function getWeather(){
 	else if(name == "Oceanside")
     	location = "http://weather.yahooapis.com/forecastrss?w=2464118&u=f";
   	else if(name == "PacificBeach")
-    	location = "Pacific Beach";
+    	location = "http://weather.yahooapis.com/forecastrss?w=2467320&u=f";
   	else if(name == "Coronado")
-    	location = "Coronado";
+    	location = "http://weather.yahooapis.com/forecastrss?w=2385261&u=f";
   	else if(name == "MissionBay")
-    	location = "Mission Bay";
+    	location = "http://weather.yahooapis.com/forecastrss?w=55970841&u=f";
     $("div #time").html("<p>"+getRealtime()+"</p>");
 	//$.get(location, displayWeather);
 }
